syntax = "proto3";

import "../global/global.proto";
import "../auth/auth.proto";

import "../data/cardData.proto";
import "../data/characterData.proto";
import "../data/gameData.proto";

import "../game/game.proto";
import "../game/gameState.proto";
import "../game/room.proto";

package packet;

// 공통 패킷 구조
message CommonPacket {
    uint32 PayloadOneofCase  = 1;
    uint32 versionLength = 2;
    string version = 3;   
    uint32 sequence = 4;
    uint32 payloadLength = 5;
    bytes payload = 6;
}

// 최상위 GamePacket 메시지
message GamePacket {
    oneof payload {
        // 회원가입 및 로그인
        C2SRegisterRequest registerRequest = 1;
        S2CRegisterResponse registerResponse = 2;
        C2SLoginRequest loginRequest = 3;
        S2CLoginResponse loginResponse = 4;

        // 방 생성
        C2SCreateRoomRequest createRoomRequest = 5;
        S2CCreateRoomResponse createRoomResponse = 6;

        // 방 목록 조회
        C2SGetRoomListRequest getRoomListRequest = 7;
        S2CGetRoomListResponse getRoomListResponse = 8;

        // 방 참가
        C2SJoinRoomRequest joinRoomRequest = 9;
        S2CJoinRoomResponse joinRoomResponse = 10;

        // 랜덤 방 참가
        C2SJoinRandomRoomRequest joinRandomRoomRequest = 11;
        S2CJoinRandomRoomResponse joinRandomRoomResponse = 12;

        // 방 참가 알림
        S2CJoinRoomNotification joinRoomNotification = 13;

        // 방 나가기
        C2SLeaveRoomRequest leaveRoomRequest = 14;
        S2CLeaveRoomResponse leaveRoomResponse = 15;

        // 방 나가기 알림
        S2CLeaveRoomNotification leaveRoomNotification = 16;

        // 게임 시작 전 역할 및 캐릭터 셔플 요청
        C2SGamePrepareRequest gamePrepareRequest = 17;
        S2CGamePrepareResponse gamePrepareResponse = 18;
        S2CGamePrepareNotification gamePrepareNotification = 19;

        // 게임 시작
        C2SGameStartRequest gameStartRequest = 20;
        S2CGameStartResponse gameStartResponse = 21;
        S2CGameStartNotification gameStartNotification = 22;

        // 위치 업데이트
        C2SPositionUpdateRequest positionUpdateRequest = 23;
        S2CPositionUpdateResponse positionUpdateResponse = 24;  // 추가된 곳
        S2CPositionUpdateNotification positionUpdateNotification = 25;

        // 카드 사용
        C2SUseCardRequest useCardRequest = 26;
        S2CUseCardResponse useCardResponse = 27;

        // 카드 사용 알림
        S2CUseCardNotification useCardNotification = 28;
        S2CEquipCardNotification equipCardNotification = 29;    // 장비
        S2CCardEffectNotification cardEffectNotification = 30;  // 장비 효과 발동 시

        // 플리마켓
        S2CFleaMarketNotification fleaMarketNotification = 31;
        C2SFleaMarketPickRequest fleaMarketPickRequest = 32;
        S2CFleaMarketPickResponse fleaMarketPickResponse = 33;

        // 유저 정보 업데이트 알림(카드 사용, 체력 감소..)
        S2CUserUpdateNotification userUpdateNotification = 34;
        
        // 페이즈 업데이트
        S2CPhaseUpdateNotification phaseUpdateNotification = 35;

        // 리액션
        C2SReactionRequest reactionRequest = 36;
        S2CReactionResponse reactionResponse = 37;

        // 턴 종료시 (phaseType 3) 카드 버리기
        C2SDestroyCardRequest destroyCardRequest = 38;
        S2CDestroyCardResponse destroyCardResponse = 39;

        // 게임 종료
        S2CGameEndNotification gameEndNotification = 40;

        // 카드 선택
        C2SCardSelectRequest cardSelectRequest = 41;
        S2CCardSelectResponse cardSelectResponse = 42;

        // 디버프 넘기기
        C2SPassDebuffRequest passDebuffRequest = 43;
        S2CPassDebuffResponse passDebuffResponse = 44;
        S2CWarningNotification warningNotification = 45;

        // 효과 알림
        S2CAnimationNotification animationNotification = 46;
    }
}